add data in db
